# Navi

./: .gitignore  INTEGRATION_SUMMARY.md  database_test_commands.md  docker-compose.yml  fix_lambda_500.py  lambda_function.py  ollamaworlflow.json  readme.txt  test_lambda.py
aws/: lambda_function.py
backend/: DEMO_INTEGRATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  README.md  REGULATIONS_ANALYSIS_README.md  ai_comment_analyzer.py  comment_analysis_api.py  example_integration.py  frontend_integration_example.js  gpt_oss_tools.py  local_storage_reader.py  main.py  navi.db  ollama_comment_analyzer.py  regulations_api_config.json  regulations_gov_api.py  requirements.txt  setup_api_key.py  simple_main.py  simple_schema.sql  start_comment_analysis_server.py
desktop/: main.js  package-lock.json  package.json  preload.cjs  preload.js  renderer.html  renderer.js
desktop/renderer/: index.html  tsconfig.json  vite.config.ts
desktop/renderer/src/: App.tsx  main.tsx  theme.ts
electron-desktop/: main.js  package.json  preload.cjs  setup-env.sh
electron-desktop/renderer/: vite.config.ts
tauri-desktop/: README.md  package-lock.json  package.json
tauri-desktop/src/: App.css  App.tsx  theme.ts
tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tauri-desktop/src-tauri/capabilities/: default.json
tauri-desktop/src-tauri/src/: lib_old.rs  main.rs
workflows/: access-denied-handler.js  alternative-urls.js  docker-compose.yml  docket-workflow.json  docketworkflow.json  enhanced-http-request-config.json  n8n-docket-workflow.json  n8n-workflow.json
(+18 files in other folders)
